--- a/LINKTREE CC/index.html
+++ b/LINKTREE CC/index.html
@@ -8,17 +8,18 @@
     <link rel="stylesheet" href="./sass/index.css">
 </head>
 <body>
-    <div class="container">
-        <div id="side">
+    <div class="tudo">
+        <div id="esq">
             <div id="img">
-                <img src="./img/logo-loja.jpg" width="150px" alt="">
+                <img src="./img/logo-loja.jpg" width="155px" alt="">
+                <p>CENTRO DA CONSTRUÇÃO</p>
             </div>
             <div id="msg">
-                <p>Á 20 ANOS PROPORCIONANDO O MELHOR ATENDIMENTO E MELHORES SERVIÇOS A VOCÊ !</p>
+                <p>Á 19 ANOS PROPORCIONANDO O MELHOR ATENDIMENTO E MELHORES SERVIÇOS A VOCÊ !</p>
             </div>
             <div id="redes">
                 <a href="">
-                    <p>NOSSO INSTAGRAM</p>
+                    <p>NOSSO WHATSAPP</p>
                 </a>
                 <a href="">
                     <p>NOSSO FACEBOOK</p>
@@ -28,60 +29,54 @@
                 </a>
             </div>
         </div>
-        <div id="consultores">
-            <h2>NOSSOS CONSULTORES DE VENDAS</h2>
-            <div id="cards">
-                <div id="card">
-                    <a href="">
-                        <p>Matheus Carmago</p>
-                    </a>
-                </div>
-                <div id="card">
-                    <a href="">
-                        <p>Missione</p>
-                    </a>
-                </div>
-                <div id="card">
-                    <a href="">
-                        <p>Márcia</p>
-                    </a>
-                </div>
-                <div id="card">
-                    <a href="">
-                        <p>Emanuelle</p>
-                    </a>
-                </div>
+        <div id="dir">
+            <div id="txt">
+                <h1>NOSSOS CONSULTORES DE VENDAS</h1>
             </div>
             <div id="cards">
                 <div id="card">
                     <a href="">
-                        <p>Renan Fabricio</p>
+                        <p>92 9 9381-0341</p>
+                        <p>Carlos</p>
                     </a>
                 </div>
                 <div id="card">
                     <a href="">
-                        <p>Carlos Nascimento</p>
-                    </a>
-                </div>
-                <div id="card">
-                    <a href="">
+                        <p>92 9 9381-0341</p>
                         <p>Eder</p>
                     </a>
                 </div>
                 <div id="card">
                     <a href="">
-                        <p>Dênis</p>
+                        <p>92 9 9381-0341</p>
+                        <p>Denis</p>
+                    </a>
+                </div>
+                <div id="card">
+                    <a href="">
+                        <p>92 9 9381-0341</p>
+                        <p>Esmael</p>
+                    </a>
+                </div>
+                <div id="card">
+                    <a href="">
+                        <p>92 9 9381-0341</p>
+                        <p>Emanuele</p>
+                    </a>
+                </div>
+                <div id="card">
+                    <a href="">
+                        <p>92 9 9381-0341</p>
+                        <p>Missione</p>
+                    </a>
+                </div>
+                <div id="card">
+                    <a href="">
+                        <p>92 9 9381-0341</p>
+                        <p>Renan Fabricio</p>
                     </a>
                 </div>
             </div>
-        </div>
-        <div id="footer">
-            <a href="">
-                <div id="sac">
-                    <p>SAC</p>
-                    <p>3643-8000</p>
-                </div>
-            </a>
         </div>
     </div>
 </body>
