--- a/LINKTREE CC/index.html
+++ b/LINKTREE CC/index.html
@@ -28,6 +28,9 @@
                     <p>NOSSO TELEVENDAS</p>
                 </a>
             </div>
+            <div id="arrow">
+                <img src="./img/arrowDown.gif" width="200px" alt="">
+            </div>
         </div>
         <div id="dir">
             <div id="txt">
