NOVAS RAIZES/TELA
NOVA TELA DE 320PX
ICON PARA O SITE

--- a/LINKTREE CC/index.html
+++ b/LINKTREE CC/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LINKTREE</title>
     <link rel="stylesheet" href="./sass/index.css">
+    <link rel="shortcut icon" href="./img/ICON.png" type="image/x-icon">
 </head>
 <body>
     <div class="tudo">
@@ -39,32 +40,32 @@
             <div id="cards">
                 <div id="card">
                     <a href="">
-                        <p>92 9 9381-0341</p>
+                        <p>92 9 8554-9802</p>
                         <p>Carlos</p>
                     </a>
                 </div>
                 <div id="card">
                     <a href="">
-                        <p>92 9 9381-0341</p>
+                        <p>92 9 9412-2746</p>
                         <p>Eder</p>
                     </a>
                 </div>
                 <div id="card">
                     <a href="">
-                        <p>92 9 9381-0341</p>
+                        <p>92 9 9290-4305</p>
                         <p>Denis</p>
                     </a>
                 </div>
                 <div id="card">
                     <a href="">
-                        <p>92 9 9381-0341</p>
-                        <p>Esmael</p>
+                        <p>92 9 8466-1163</p>
+                        <p>Izael</p>
                     </a>
                 </div>
                 <div id="card">
                     <a href="">
-                        <p>92 9 9381-0341</p>
-                        <p>Emanuele</p>
+                        <p>92 9 9290-3588</p>
+                        <p>Manuele</p>
                     </a>
                 </div>
                 <div id="card">
@@ -76,6 +77,12 @@
                 <div id="card">
                     <a href="">
                         <p>92 9 9381-0341</p>
+                        <p>Matheus</p>
+                    </a>
+                </div>
+                <div id="card">
+                    <a href="">
+                        <p>92 9 9155-0490</p>
                         <p>Renan Fabricio</p>
                     </a>
                 </div>
